# async-signal

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  generate_windows_bindings.rs
.github/workflows/: ci.yml  release.yml
examples/: print.rs
src/: lib.rs  pipe.rs  signalfd.rs  windows_registry.rs
